# notesmith

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_BACKUP_18406.md  AGENTS_BASE_18406.md  LICENSE.md  README.md  docker-compose.yml  restart.ps1  restart.sh  setup.ps1  setup.sh  start.ps1  start.sh  stop.ps1  stop.sh  test.ps1  test.sh
.claude/: settings.local.json
.cursor/: environment.json
backend/: .dockerignore  Dockerfile  README.md  env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  appointments.py  deps.py  notes.py  recordings.py  templates.py  transcripts.py
backend/app/cli/: __init__.py
backend/app/cli/commands/: __init__.py  config.py  export.py  generate.py  process.py  templates.py  transcribe.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  client.py
backend/app/models/: __init__.py  appointments.py  base.py  notes.py  recordings.py  templates.py  transcripts.py  users.py
backend/app/services/: __init__.py  export.py  note_generator.py  template_engine.py  transcription.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  prompts.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: __init__.py  conftest.py  test_cli.py  test_export.py  test_health.py  test_models.py  test_security.py  test_template_engine.py
docs/: EXTENSION.md  ROADMAP.md  SPECS.md  supabase_docs.md
extension/: README.md  package.json  tailwind.config.js  tsconfig.json  wxt.config.ts
(+62 files in other folders)
